--- a/sponsor.html
+++ b/sponsor.html
@@ -289,7 +289,7 @@
                             <li><a href="#">Venue</a></li>
                             <li><a href="#">Terms & Conditions</a></li>
                         </ul>
-                        <p><i class="icofont-copyright"></i> Mossammat Faria & Golam Murtoza All rights reserved</p>
+                        <p><i class="icofont-copyright"></i> Mossammat Faria All rights reserved</p>
                     </div>
                 </div>
             </div>
